most of chatper 1 in place

--- a/_toc.yml
+++ b/_toc.yml
@@ -40,35 +40,32 @@
     title: "How to start and turn in assignments"
   - file: content/assignments/howto_review 
     title: "How to do your peer reviews"
-  - file: content/assignments/asgn_5 
-    title: "ASGN 5: Our first full data science assignment"
+  - file: content/assignments/mid_proj 
+    title: "Midterm project"
   - file: content/assignments/project 
     title: "Final projects"
-
-# This MD files can be copied into repo, but remove the dropdowns. And link to the website. 
-# PROPOSAL DUE APR 21 5pm. STATUS REPORT DUE APR 28. 
   
-# - part: Textbook 
-  # numbered: true # will number the chapters and sections INSIDE the part(s) below
-  # chapters:  
-  # - file: "content/01/00_Getting_Started"
-    # title: "Motivation and Getting Started"
-    # sections:
-    # - file: "content/01/01_Motivation"
-      # title: "Motivation"
-    # - file: "content/01/02_Setup"
-    # - file: "content/01/03_github"
-    # - file: "content/01/04_Markdown"
-    # - file: "content/01/05_jupyterlab"
-      # title: "Jupyter Lab Basics"    
-    # - file: "content/01/06_python"
-      # title: "Python Basics"    
-    # - file: "content/01/07_debugging"
-      # title: "Debugging"    
-    # - file: "content/01/07a_errors"
-    # - file: "content/01/08_libraries"
-    # - file: "content/01/09_gitignore"
-      # title: "Gitignore Files"    
+- part: Textbook 
+  numbered: true # will number the chapters and sections INSIDE the part(s) below
+  chapters:  
+  - file: "content/01/00_Getting_Started"
+    title: "Motivation and Getting Started"
+    sections:
+    - file: "content/01/01_Motivation"
+      title: "Motivation"
+    - file: "content/01/02_Setup"
+    - file: "content/01/03_github"
+    - file: "content/01/04_Markdown"
+    - file: "content/01/05_jupyterlab"
+      title: "Jupyter Lab Basics"    
+    - file: "content/01/06_python"
+      title: "Python Basics"    
+    - file: "content/01/07_debugging"
+      title: "Debugging"    
+    - file: "content/01/07a_errors"
+    - file: "content/01/08_libraries"
+    - file: "content/01/09_gitignore"
+      title: "Gitignore Files"    
     
   # - file: "content/02/10_Golden_1"
     # title: "Good Analysis Practices"
