--- a/_toc.yml
+++ b/_toc.yml
@@ -67,21 +67,21 @@
     - file: "content/01/09_gitignore"
       title: "Gitignore Files"    
     
-  # - file: "content/02/10_Golden_1"
-    # title: "Good Analysis Practices"
-    # sections:
-    # - file: "content/02/10_Golden_2"
-      # title: "A case study of bad research"
-    # - file: "content/02/10_Golden_3"
-      # title: "The golden rules"
-    # - file: "content/02/10_Golden_4"
-      # title: "Good data"
-    # - file: "content/02/10_Golden_5"
-      # title: "When to write functions"
-    # - file: "content/02/10_Golden_6"
-      # title: "Reorganizing the bad research folder"
-    # - file: "content/02/10_Golden_7"
-      # title: "Filepaths"
+  - file: "content/02/10_Golden_1"
+    title: "Good Analysis Practices"
+    sections:
+    - file: "content/02/10_Golden_2"
+      title: "A case study of bad research"
+    - file: "content/02/10_Golden_3"
+      title: "The golden rules"
+    - file: "content/02/10_Golden_4"
+      title: "Good data"
+    - file: "content/02/10_Golden_5"
+      title: "When to write functions"
+    - file: "content/02/10_Golden_6"
+      title: "Reorganizing the bad research folder"
+    - file: "content/02/10_Golden_7"
+      title: "Filepaths"
     
   # - file: "content/03/00_Data_Wrangling_Intro"
     # title: "Wrangling with Data"
