chapter 3 in place not editted

--- a/_toc.yml
+++ b/_toc.yml
@@ -83,57 +83,54 @@
     - file: "content/02/10_Golden_7"
       title: "Filepaths"
     
-  # - file: "content/03/00_Data_Wrangling_Intro"
-    # title: "Wrangling with Data"
-    # sections:
-    # - file: "content/03/01_Numpy"
-      # title: "Numpy"
-      # sections:
-        # - file: "content/03/01a_NumpyCS"
-          # title: "Numpy + Scientific Computing"
-        # - file: "content/03/01b_NumpyBasics"
-          # title: "A (Very) Short Introduction"
-        # - file: "content/03/01c_NumpyPractice"
-          # title: "Exercises"
-        # - file: "content/03/01d_NumpyResources"
-          # title: "More Resources"
-    # - file: "content/03/02a_pandasIntro"
-      # title: "Pandas"
-      # sections:
-        # - file: "content/03/02a_pandasTips"
-          # title: "Tips"      
-        # - file: "content/03/02b_pandasVocab"
-          # title: "Vocab and Long vs Wide Data"      
-        # - file: "content/03/02c_commonFcns"
-          # title: "Common Functions"      
-        # - file: "content/03/02d_temp"
-          # title: "Temp. vs Perm. Objects"      
-        # - file: "content/03/02e_eda_golden"
-          # title: "Golden Rules + EDA"      
-        # - file: "content/03/02f_chains"
-          # title: "Pandas Chains" 
-        # - file: "content/03/02g_commontasks"
-          # title: "Common Tasks" 
-        # - file: "content/03/02h_exercises"
-          # title: "Exercises" 
-        # - file: "content/03/02j_resourcesAndSum"
-          # title: "Summary and Resources" 
-    # - file: "content/03/04a-dataviz"
-      # title: "Data Visualization"
-      # sections:
-        # - file: "content/03/04b-whyplot"
-        # - file: "content/03/04c-makeplot"
-        # - file: "content/03/04d-whichplot"
-        # - file: "content/03/04e-visualEDA"
-        # - file: "content/03/04f-betterplots"
-#        - file: "content/03/04g-lyingfigures"
-# Add as note in toc for next years stats pic
-# otis_reid (@Otis Reid) Tweeted: Good article about disbelief being at the root of belief in conspiracy theories from @TimHarford — did not know this bit before! https://t.co/1UlLs43STg https://twitter.com/otis_reid/status/1389707199837097988?s=27
-    # - file: "content/03/05a-otherskills"
-      # sections:
-        # - file: "content/03/05b_merging"
-        # - file: "content/03/05c_missingdata"
-        # - file: "content/03/05d_outliers"
+  - file: "content/03/00_Data_Wrangling_Intro"
+    title: "Wrangling with Data"
+    sections:
+    - file: "content/03/01_Numpy"
+      title: "Numpy"
+      sections:
+      - file: "content/03/01a_NumpyCS"
+        title: "Numpy + Scientific Computing"
+      - file: "content/03/01b_NumpyBasics"
+        title: "A (Very) Short Introduction"
+      - file: "content/03/01c_NumpyPractice"
+        title: "Exercises"
+      - file: "content/03/01d_NumpyResources"
+        title: "More Resources"
+    - file: "content/03/02a_pandasIntro"
+      title: "Pandas"
+      sections:
+      - file: "content/03/02a_pandasTips"
+        title: "Tips"      
+      - file: "content/03/02b_pandasVocab"
+        title: "Vocab and Long vs Wide Data"      
+      - file: "content/03/02c_commonFcns"
+        title: "Common Functions"      
+      - file: "content/03/02d_temp"
+        title: "Temp. vs Perm. Objects"      
+      - file: "content/03/02e_eda_golden"
+        title: "Golden Rules + EDA"      
+      - file: "content/03/02f_chains"
+        title: "Pandas Chains" 
+      - file: "content/03/02g_commontasks"
+        title: "Common Tasks" 
+      - file: "content/03/02h_exercises"
+        title: "Exercises" 
+      - file: "content/03/02j_resourcesAndSum"
+        title: "Summary and Resources" 
+    - file: "content/03/04a-dataviz"
+      title: "Data Visualization"
+      sections:
+      - file: "content/03/04b-whyplot"
+      - file: "content/03/04c-makeplot"
+      - file: "content/03/04d-whichplot"
+      - file: "content/03/04e-visualEDA"
+      - file: "content/03/04f-betterplots"
+    - file: "content/03/05a-otherskills"
+      sections:
+      - file: "content/03/05b_merging"
+      - file: "content/03/05c_missingdata"
+      - file: "content/03/05d_outliers"
      
   # - file: "content/04/00_World_Wide_Data"
     # title: "Accessing the World of Data"
