exit section as chapter

--- a/_toc.yml
+++ b/_toc.yml
@@ -193,11 +193,8 @@
         title: "Many Models" 
 # import smattering? (from below)
 # gradient booksting from L24 2020
-    # - file: "content/05/05_thefuture"              
-      # sections:
-        # - file: "content/05/05_saving"    
 
-
+  - file: "content/05/05_thefuture"
 
 # #########################################################
 
