--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
+# these are the packages GitHub uses to build the website
+
+# the most "important" req is sphinx-book-theme=0.0.39. 
+# Later versions use pydata themes that complete change TOC behavior
+# so reproducing the collapsing behavior and coloring would require 
+# updates to the css files, if the new pydata theme even allows collapsing.
+
 jupyter-book
 matplotlib
 numpy
