Chapter 2, clarity and reorg
Still want to add some more tips

--- a/_toc.yml
+++ b/_toc.yml
@@ -75,11 +75,13 @@
     - file: "content/02/10_Golden_3"
       title: "The golden rules"
     - file: "content/02/10_Golden_4"
-      title: "Good data"
-    - file: "content/02/10_Golden_5"
-      title: "When to write functions"
+      title: "Storing data smartly"
+    - file: "content/02/10_Golden_5a"
+      title: "Functions"
+    - file: "content/02/10_Golden_5b"
+      title: "Writing good code comments"
     - file: "content/02/10_Golden_6"
-      title: "Reorganizing the bad research folder"
+      title: "Organizing your projects"
     - file: "content/02/10_Golden_7"
       title: "Filepaths"
     
