--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,12 @@ execute:
 parse:
   myst_enable_extensions:  # default extensions to enable in the myst parser. See https://myst-parser.readthedocs.io/en/latest/using/syntax-optional.html
     - amsmath
-
+    - colon_fence
+    - dollarmath
+#     - linkify
+    - substitution
+    - tasklist
+    
 #######################################################################################
 # HTML-specific settings
 html:
