--- a/_toc.yml
+++ b/_toc.yml
@@ -41,7 +41,7 @@
   - file: content/assignments/howto_review 
     title: "How to do your peer reviews"
   - file: content/assignments/mid_proj 
-    title: "Midterm project"
+    title: "Midterm project AKA ASGN 5"
   - file: content/assignments/project 
     title: "Final projects"
   
